BBClient getPatient returns Bundles and supports lastUpdated.